--- a/TTT.html
+++ b/TTT.html
@@ -30,7 +30,7 @@
             </tr>
         </table>
     </main>
-    <button id="clear-btn" onclick="document.location.reload()">New Game</button>
+    <button id="clear-btn" onclick="gameReload()">New Game</button>
     <button id="color-btn" onclick="chageTheme()">Chage Theme</button>
     <img src="./TTT_IMG/Game_Title.jpg" id="game-title">
     <script src="TTT.js"></script>
